# term

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SECURITY_CHECKLIST.md  deny.toml  install-hooks.sh  setup-rust-env.sh
.cargo/: audit.toml  (+1 more)
docs/examples/production-pipeline/: Cargo.toml  README.md
docs/examples/production-pipeline/src/: main.rs
examples/: Cargo.toml  README.md
examples/examples/: column_count_example.rs  data_type_validation_example.rs
examples/src/: anomaly_detection_strategy.rs  basic_validation.rs  cloud_storage_example.rs  column_count_example.rs  data_type_validation_example.rs  deequ_migration.rs  incremental_analysis.rs  result_formatters_example.rs  structured_logging_example.rs  telemetry_example.rs  tpc_h_validation.rs
node/term-guard/: .gitignore  .npmignore  Cargo.toml  index.d.ts  index.js  index.ts  package-lock.json  package.json  test-data-sources.ts  test.js  test.ts  tsconfig.json
node/term-guard/src/: check.rs  data_source.rs  lib.rs  types.rs  validation_suite.rs
node/term-guard/src/constraints/: completeness.rs  custom.rs  mod.rs  pattern.rs  statistics.rs  uniqueness.rs
node/term-guard/src/sources/: cloud.rs  datafusion.rs  file.rs  memory.rs  mod.rs
node/term-guard/test/: index.test.js  index.test.ts  run-tests.js
term-core/: Cargo.toml  README.md
term-core/benches/: optimizer_bench.rs  optimizer_bench.rs.bak  unified_constraints_bench.rs  unified_constraints_quick_bench.rs
term-core/src/: error.rs  formatters.rs  lib.rs  logging.rs  prelude.rs  security.rs  telemetry.rs  test_utils.rs
term-core/src/constraints/: README.md  approx_count_distinct.rs  assertion.rs  column_count.rs  completeness.rs  consistency.rs  correlation.rs  custom_sql.rs  datatype.rs  format.rs  histogram.rs  length.rs  mod.rs  quantile.rs  size.rs  statistics.rs  uniqueness.rs  values.rs
term-core/src/core/: builder_extensions.rs  check.rs  constraint.rs  context.rs  level.rs  logical.rs  mod.rs  result.rs  suite.rs  unified.rs
term-core/src/optimizer/: combiner.rs  executor.rs  mod.rs  tests.rs
term-core/src/sources/: cloud.rs  csv.rs  database.rs  json.rs  mod.rs  parquet.rs
term-core/tests/: approx_count_distinct_integration.rs  builder_extensions_test.rs  cloud_storage_test.rs  column_count_integration.rs  completeness_integration.rs  context_integration.rs  data_type_integration.rs  distinctness_integration.rs  exact_quantile_integration.rs  histogram_integration.rs  integration_test_suite.rs  integration_test_suite.rs.bak  metrics_test.rs  mod.rs  optimizer_integration.rs  performance_regression_test.rs  property_tests.rs  security_tests.rs  sources_integration.rs  string_length_integration.rs  structured_logging_test.rs  test_utils_test.rs  unique_value_ratio_integration.rs
term-guard/: Cargo.toml  README.md
term-guard/benches/: column_profiler_benchmarks.rs  comprehensive_benchmarks.rs  cross_table_sum_benchmarks.rs  kll_sketch_bench.rs  optimizer_bench.rs  type_inference_benchmarks.rs  unified_constraints_bench.rs  unified_constraints_quick_bench.rs
term-guard/examples/: grouped_metrics.rs
term-guard/fixtures/: .gitkeep
term-guard/src/: error.rs  formatters.rs  lib.rs  logging.rs  prelude.rs  security.rs  telemetry.rs  test_fixtures.rs  test_helpers.rs  test_utils.rs  test_utils_cached.rs
term-guard/src/analyzers/: anomaly.rs  context.rs  errors.rs  grouped.rs  incremental.rs  inference.rs  mod.rs  profile_types.rs  profiler.rs  runner.rs  schema_analyzer.rs  suggestions.rs  tests.rs  traits.rs  types.rs
term-guard/src/analyzers/advanced/: approx_count_distinct.rs  compliance.rs  correlation.rs  data_type.rs  entropy.rs  histogram.rs  kll_sketch.rs  mod.rs  mutual_information.rs  standard_deviation.rs  tests.rs
term-guard/src/cloud/: alerting.rs  buffer.rs  cache.rs  client.rs  error.rs  mod.rs  repository.rs  types.rs  worker.rs
term-guard/src/constraints/: approx_count_distinct.rs  assertion.rs  column_count.rs  completeness.rs  consistency.rs  correlation.rs  cross_table_sum.rs  custom_sql.rs  datatype.rs  foreign_key.rs  format.rs  histogram.rs  join_coverage.rs  length.rs  mod.rs  quantile.rs  size.rs  statistics.rs  temporal_ordering.rs  uniqueness.rs  values.rs
term-guard/src/core/: builder_extensions.rs  check.rs  constraint.rs  context.rs  debug_context.rs  fluent_builder.rs  level.rs  logical.rs  mod.rs  multi_source.rs  multi_source_validator.rs  result.rs  suite.rs  unified.rs  validation_context.rs
term-guard/src/nexus/: buffer.rs  cache.rs  client.rs  error.rs  mod.rs  repository.rs  types.rs  worker.rs
term-guard/src/optimizer/: analyzer.rs  combiner.rs  executor.rs  stats_cache.rs
term-guard/src/repository/: datafusion_executor.rs  in_memory.rs  mod.rs  query.rs  result_key.rs
term-guard/src/sources/: csv.rs  database.rs  joined.rs  json.rs  mod.rs  parquet.rs
term-guard/tests/: advanced_analytics_integration.rs  analysis_runner_integration.rs  analyzer_integration_tests.rs  anomaly_detection_integration.rs  approx_count_distinct_integration.rs  builder_extensions_test.rs  cloud_integration.rs  cloud_storage_test.rs  column_count_integration.rs  column_profiler_integration.rs  completeness_integration.rs  context_integration.rs  data_type_integration.rs  database_validation_test.rs  distinctness_integration.rs  exact_quantile_integration.rs  histogram_integration.rs  integration_test_suite.rs  joined_sources_integration.rs  metrics_test.rs  mod.rs  multi_source_integration.rs  multi_source_validation_integration.rs  nexus_integration.rs  optimizer_integration.rs  performance_regression_test.rs  property_tests.proptest-regressions  property_tests.rs  repository_integration.rs  security_tests.rs  sources_integration.rs  sql_injection_security_tests.rs  string_length_integration.rs  structured_logging_test.rs  test_utils_test.rs  tpc_integration_tests.rs  type_inference_integration.rs  unique_value_ratio_integration.rs  validation_context_security_test.rs
term-hooks/: Cargo.toml  README.md
term-hooks/src/: lib.rs
(+102 files in other folders)
