[package]
authors = ["Eric P. Simon <ericpsimon@gmail.com>"]
categories = ["database", "data-structures", "asynchronous"]
description = "A Rust data validation library providing Deequ-like capabilities without Spark dependencies"
documentation = "https://docs.rs/term-guard"
edition = "2021"
exclude = [
  "tests/*",
  "benches/*",
  ".github/*",
  ".gitignore",
  "CLAUDE.md",
]
homepage = "https://github.com/withterm/term"
keywords = ["data-validation", "data-quality", "datafusion", "arrow", "deequ"]
license = "MIT"
name = "term-guard"
readme = "../README.md"
repository = "https://github.com/withterm/term"
rust-version = "1.70"
version = "0.0.1"

[features]
default = []
# Database features temporarily disabled until datafusion-table-providers is on crates.io
# database = ["dep:datafusion-table-providers"]
# postgres = ["database", "datafusion-table-providers/postgres"]
# mysql = ["database", "datafusion-table-providers/mysql"]
# sqlite = ["database", "datafusion-table-providers/sqlite"]
# all-databases = ["postgres", "mysql", "sqlite"]
all-cloud = ["s3", "gcs", "azure"]
azure = ["cloud-storage", "object_store/azure"]
cloud-storage = ["dep:object_store", "dep:url"]
gcs = ["cloud-storage", "object_store/gcp"]
s3 = ["cloud-storage", "object_store/aws"]
telemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk"]
test-utils = ["dep:rand"]

[dependencies]
arrow = "55.2"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
datafusion = "48.0.1"
futures = "0.3"
# datafusion-table-providers = { git = "https://github.com/datafusion-contrib/datafusion-table-providers.git", branch = "main", optional = true }
# TODO: Replace with crates.io version when available
glob = "0.3"
lazy_static = "1.5"
object_store = {version = "0.12", optional = true}
once_cell = "1.18"
opentelemetry = {version = "0.24", optional = true}
opentelemetry_sdk = {version = "0.24", optional = true}
rand = {version = "0.8", optional = true}
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-opentelemetry = {version = "0.25", optional = true}
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}
url = {version = "2", optional = true}
zeroize = {version = "1.8", features = ["derive"]}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
parquet = "55.2"
proptest = "1.6"
rand = "0.8"
serde_json = "1"
tempfile = "3"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}

[[bench]]
harness = false
name = "optimizer_bench"

[[bench]]
harness = false
name = "unified_constraints_bench"

[[bench]]
harness = false
name = "unified_constraints_quick_bench"

[[bench]]
harness = false
name = "column_profiler_benchmarks"

[[bench]]
harness = false
name = "type_inference_benchmarks"
