[package]
name = "term-guard-node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
term-guard = { path = "../../term-guard" }
napi = { version = "2", features = ["async", "napi8"] }
napi-derive = "2"
datafusion = "48.0.1"
arrow = "55.2"
arrow-json = "55.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"

# Optional cloud storage dependencies
object_store = { version = "0.11", optional = true }

[features]
default = []
cloud-storage = ["object_store"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true